fixed prettyPhoto z-index bug with fixed header

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1083,3 +1083,7 @@ button i    {   @extend body;font-size:2.0rem;   }
 }
 }
 }
+
+div.pp_pic_holder {
+z-index: 120000 !important;
+}
